--- a/base_templates/global/partials/_recipes.html
+++ b/base_templates/global/partials/_recipes.html
@@ -11,21 +11,37 @@
         
     </div>
 
+
     <div class="recipe-author">
+        
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            {{recipe.author.first_name}} {{recipe.author.last_name}}
+                {% if recipe.author is not None %}
+                    {% if recipe.author.first_name %}
+                        {{recipe.author.first_name}} {{recipe.author.last_name}}
+                    {% else %}
+                        {{recipe.author.username}}
+                    {% endif %}
+                {% else %}
+                    Desconhecido
+                {% endif %}
         </span>
+       
+
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{recipe.created_at|date:"d/m/Y" }} as {{recipe.created_at|date:"H:i" }}
         </span>
-        <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha/">
-                <i class="fas fa-layer-group"></i>
-                <span>{{recipe.category.name}}</span>
-            </a>
-        </span>
+
+
+        {% if recipe.category is not None%}
+            <span class="recipe-author-item">
+                <a href="{% url "recipes:category" recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i>
+                    <span>{{recipe.category.name}}</span>
+                </a>
+            </span>
+        {% endif %}
     </div>
 
     <div class="recipe-content">
@@ -57,7 +73,11 @@
         </footer>
     {% else %}
         <div class="preparation-steps">
-            {{ recipe.preparation_steps | linebreaksbr }}
+            {% if recipe.preparaton_steps_is_html %}
+            {{ recipe.preparation_steps | safe }}
+            {% elif %}
+                {{ recipe.preparation_steps | linebreaksbr }}
+            {% endif %}
         </div>
     {% endif %}
 
