--- a/base_templates/global/partials/_recipes.html
+++ b/base_templates/global/partials/_recipes.html
@@ -1,9 +1,11 @@
 <div class="recipe recipe-list-item">
-    <div class="recipe-cover">
-        <a href="{% url 'recipes:recipe' recipe.id %}">
-            <img src="{{ recipe.cover.url }}" alt="Temporario">
-        </a>
-    </div>
+    {% if recipe.cover.url is not Null %}
+        <div class="recipe-cover">
+            <a href="{% url 'recipes:recipe' recipe.id %}">
+                <img src="{{ recipe.cover.url }}" alt="Temporario">
+            </a>
+        </div>
+    {% endif %}
     <div class="recipe-title-container">
         <a href="{% url 'recipes:recipe' recipe.id %}">
             <h2 class="recipe-title">{{ recipe.title }}</h2>
@@ -73,11 +75,11 @@
         </footer>
     {% else %}
         <div class="preparation-steps">
-            {% if recipe.preparaton_steps_is_html %}
-            {{ recipe.preparation_steps | safe }}
-            {% elif %}
+            {% if recipe.preparation_steps_is_html %}
+                {{ recipe.preparation_steps | safe }}
+            {% else %}
                 {{ recipe.preparation_steps | linebreaksbr }}
-            {% endif %}
+            {% endif %} 
         </div>
     {% endif %}
 
