--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,9 +4,15 @@
 
 {% block content %}
     <div class="main-content main-content-list container">
+
         {% for recipe in recipes %}
             {% include "global/partials/_recipes.html" %}
-            {% endfor %}
+        {% empty %}
+            <div class="center m-y">
+                <h1>No recipes found here 😢</h1>
+            </div>
+            
+        {% endfor %}
 
     </div>
 {% endblock content %}
