--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -396,6 +396,25 @@ h1,h2,h3,h4,h5,h6 {
     color: var(--color-debug-dark);
   }
 
+  /* Authors */
+.login-message {
+margin: 1rem 0;
+}
+
+.authors-dashboard-container {
+    max-width: 64rem;
+    text-align: left;
+    padding: var(--spacing-gutter-medium);
+    margin: 0 auto;
+}
+
+.authors-dashboard-container h3,
+.authors-dashboard-container p,
+.authors-dashboard-container ul {
+    list-style-type: none;
+    margin: 1rem 0;
+}
+
 /* Generic  */
 .center {
     text-align: center;
