--- a/base_templates/global/partials/_pagination.html
+++ b/base_templates/global/partials/_pagination.html
@@ -1,8 +1,8 @@
 {% if recipes.has_other_pages %}
-    <div class="container pagination">
+    <nav role="navigation" aria-label="Main Pagination" class="container pagination">
         <div class="pagination-content">
             {% if pagination_range.first_page_out_of_range %}
-                <a class="page-link page-item" href="?page=1{{addtional_url_query}}">
+                <a class="page-link page-item" aria-label="Go to page 1" href="?page=1{{addtional_url_query}}">
                     1
                 </a>
                 <span class="page-item">...</span>
@@ -10,18 +10,32 @@
 
             {% for page in pagination_range.pagination  %}
                 {% if pagination_range.current_page == page %}
-                    <a class="page-link page-item page-current" href="?page={{page}}{{ addtional_url_query}}">{{page}}</a>
+                    <a class="page-link page-item page-current"
+                    aria-label="Current Page {{page}}"
+                    aria-current="true"
+                    href="?page={{page}}{{ addtional_url_query}}">
+                        {{page}}
+                    </a>
                 {% else %}
-                    <a class="page-link page-item" href="?page={{page}}{{addtional_url_query}}">{{page}}</a>
+                    <a 
+                    class="page-link page-item" 
+                    href="?page={{page}}{{addtional_url_query}}"
+                    aria-label="Go to page {{page}}"
+                    >
+                        {{page}}
+                    </a>
                 {% endif %}
             {% endfor %}
 
             {% if pagination_range.last_page_out_of_range %}
                 <span class="page-item">...</span>
-                <a class="page-link page-item" href="?page={{pagination_range.total_pages}}{{ addtional_url_query}}">
+                <a class="page-link page-item" 
+                href="?page={{pagination_range.total_pages}}{{ addtional_url_query}}"
+                aria-label="Go to page {{pagination_range.total_pages}}"
+                >
                     {{pagination_range.total_pages}}
                 </a>
             {% endif %}
         </div>
-    </div>
+    </nav>
 {% endif %}
