--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -6,13 +6,23 @@
   <div class="main-content center container">
     <h2>Dashboard ({{user}})</h2>
     {% include "global/partials/_login-messages.html"%}
+    {% include "global/partials/_messages.html" %}
 
     <div class="authors-dashboard-container">
       <h3>Your recipes</h3>
       <ul>
         {% for recipe in recipes %}
           <li>
-            <a href="#">{{recipe.title}}</a>
+            <a href="{% url 'authors:dashboard_recipe_edit' recipe.id %}">{{recipe.title}}</a> - 
+            <form 
+              class="inline-form form-delete"  
+              action="{% url 'authors:dashboard_recipe_delete'%}" 
+              method="POST"
+            >
+              {% csrf_token %}
+              <input type="hidden" name="id" value="{{recipe.id}}">
+              <button class="plaintext-button" type="submit">❌</button>
+            </form>
           </li>
         {% empty %}
           <li>
@@ -23,8 +33,5 @@
     </div>
 
   </div>
-
-  {% include "global/partials/_messages.html" %}
-  {% include "global/partials/_form.html" %}
  
 {% endblock %}
