--- a/base_templates/global/partials/_login-messages.html
+++ b/base_templates/global/partials/_login-messages.html
@@ -1,7 +1,9 @@
 {% if request.user.is_authenticated %}
 <div class="login-message">
+  Your are logged in with
   {{request.user.username}}
-  Please,
+  <a href="{% url 'authors:dashboard'%}">See your recipes</a>,
+  <a href="{% url 'authors:dashboard_recipe_new'%}">create a new recipe</a>, or
   <form action="{% url "authors:logout" %}" method="POST">
     {% csrf_token %}
     <button type='submit'>Click Here</button>
