feat: menu - profile

--- a/base_templates/global/partials/_recipes.html
+++ b/base_templates/global/partials/_recipes.html
@@ -79,7 +79,18 @@
                 {{ recipe.preparation_steps | safe }}
             {% else %}
                 {{ recipe.preparation_steps | linebreaksbr }}
-            {% endif %} 
+            {% endif %}
+
+            {% if recipe.tags.all %}
+                <p>
+                    Tags:
+                    {% for tag in recipe.tags.all  %}
+                        <a href="{% url 'recipes:tag' tag.slug %}">
+                            {{ tag.name }}
+                        </a>
+                    {% endfor %}
+                </p>
+            {% endif %}
         </div>
     {% endif %}
 
