--- a/base_templates/global/partials/_recipes.html
+++ b/base_templates/global/partials/_recipes.html
@@ -17,6 +17,9 @@
     <div class="recipe-author">
         
         <span class="recipe-author-item">
+            {% if recipe.author.profile %}
+                <a href="{% url "authors:profile" recipe.author.profile.id %}">
+            {% endif %}
             <i class="fas fa-user"></i>
                 {% if recipe.author is not None %}
                     {% if recipe.author.first_name %}
@@ -27,6 +30,9 @@
                 {% else %}
                     Desconhecido
                 {% endif %}
+            {% if recipe.author.profile %}
+                </a>
+            {% endif %}
         </span>
        
 
